--- a/src/Plugins/SmartStore.AmazonPay/Localization/resources.de-de.xml
+++ b/src/Plugins/SmartStore.AmazonPay/Localization/resources.de-de.xml
@@ -8,19 +8,15 @@
 
 	<LocaleResource Name="AdminInstruction">
 		<Value>
-			<![CDATA[<p>Registrieren Sie sich zunächst bei <a href="https://payments.amazon.de/preregistration/lpa?ld=SPEXDEAPA-SmartStore.Net-CP-DP">Amazon Payments</a> oder klicken Sie unten auf <b>Jetzt registrieren</b>.</p>
+			<![CDATA[<p>Klicken Sie unten auf <b>Jetzt registrieren</b>, um sich bei Amazon Payments zu registrieren.</p>
 <p>So richten Sie <b>Login und Bezahlen mit Amazon</b> ein:</p><ul>
 <li>Tragen Sie Ihre Amazon-Zugangsdaten unten in die dafür vorgesehenen Felder ein.
-<ul>
-<li>Die Zugangsdaten finden Sie in Ihrem <a href="https://sellercentral-europe.amazon.com" target="_blank">Amazon Seller Central</a> Konto.</li>
-<li>Ihre Händlernummer finden Sie dort rechts oben unter <b>Einstellungen > Integrationseinstellungen</b>.</li>
-<li>Die beiden Zugangsschlüssel finden Sie dort links oben unter <b>Integration > MWS Access Key</b>. In <a href="http://download.smartstore.com/pub/docs/14_Amazon_Payments_Getting_AWS_Keys_DE.pdf">diesem Dokument</a> finden Sie Bilder, wie Sie diese erstellen.</li>
-</ul></li>
+Die Zugangsdaten finden Sie in Ihrem <a href="https://sellercentral-europe.amazon.com" target="_blank">Amazon Seller Central</a> Konto oben links unter <b>Integration > MWS Access Key</b>.</li>
 <li>Falls Sie Sofortbenachrichtigungen (IPN) erhalten möchten (SSL zwingend erforderlich!), so tragen Sie die unten aufgeführte IPN URL unter <b>Einstellungen > Integrationseinstellungen > Sofortbenachrichtigungs-Einstellungen > Händler-URL</b> ein.</li>
 </ul>
 <p>Bitte fügen Sie Informationen zu <b>Login und Bezahlen mit Amazon</b> auf Ihrer Seite der Zahlungsarten ein (siehe <b>CMS > Seiten</b>). Bildmaterial finden Sie <a href="https://payments.amazon.de/resources#marks">hier</a>.
 Textvorschläge:<ul>
-<li>Option 1: Login und Bezahlen mit Amazon: Zahlen Sie jetzt mit den Zahl- und Lieferinformationen aus Ihrem Amazon-Konto.</li>
+<li>Option 1: Amazon Pay: Zahlen Sie jetzt mit den Zahl- und Lieferinformationen aus Ihrem Amazon-Konto.</li>
 <li>Option 2: Sie sind Amazon-Kunde? Zahlen Sie jetzt mit den Zahl- und Lieferinformationen aus Ihrem Amazon-Konto.</li>
 <li>Option 3: Sie sind Amazon-Kunde? Zahlen Sie jetzt mit den Daten aus Ihrem Amazon-Konto.</li>
 </ul></p>]]>
